v2.9.4 - PDF Print, Dark Mode Fixes
Changed the "background color" tile on the main page to remove the flashing white color (dark mode).

Fixed an issue with PDFs not rendering correctly. The background image and gradient were not covering the entire page.
There might have been a change in the print() functionality that caused this issue.

Fixed the Contact Page colors in the dark mode.

Implemented other minor design changes.

--- a/int_resources/css/general.css
+++ b/int_resources/css/general.css
@@ -1014,7 +1014,7 @@ main{
     
     @page{ 
         margin:0;
-        size:A4 landscape;
+        size:1440px 1018px;
     }
 
     html, body{
